<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:textColor="@color/text_dark"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_lunch_will_be_served_in"
        android:id="@+id/description"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/text_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="13"
        android:id="@+id/time"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="46sp"
        android:textColor="@color/text_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:id="@+id/units"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textColor="@color/text_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_im_here"
        android:id="@+id/done"
        android:layout_gravity="right"
        android:layout_marginTop="47dp"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/list_item_background"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:padding="16dp" />
</LinearLayout>