<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/root"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_description"
        android:id="@+id/title"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="47dp"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <tseh20.wlunch.views.CustomEditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/info"
        android:hint="@string/phone"
        android:gravity="center"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:imeOptions="actionNext"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:textColor="@color/green"
        android:background="@drawable/list_item_background"
        android:clickable="true"
        android:focusable="true"
        android:textSize="15sp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="14dp"
        android:textAllCaps="true"
        android:padding="16dp"
        android:gravity="center"
        android:layout_gravity="right" />
</LinearLayout>