<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minWidth="64dp"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/coffee"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/price"
            android:layout_marginTop="8dp"
            android:textColor="@color/green"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:id="@+id/number"
            android:layout_marginTop="11dp"
            android:textColor="@color/text_mid"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout2"
        android:layout_marginRight="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Roasters &amp; Coffee bar"
            android:id="@+id/title"
            android:layout_marginTop="24dp"
            android:textSize="14sp"
            android:textColor="@color/text_dark"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:layout_marginRight="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:id="@+id/time"
            android:textColor="@color/text_light"
            android:layout_marginTop="8dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/description"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@color/text_light"
            android:layout_marginRight="28dp"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:id="@+id/distance"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            android:textColor="@color/text_dark"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expand"
        android:src="@drawable/ic_down"
        android:background="@drawable/list_item_background"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:padding="4dp" />

</RelativeLayout>